updated 4 fragments with original graphics

--- a/Aquarium/res/values/strings.xml
+++ b/Aquarium/res/values/strings.xml
@@ -23,7 +23,7 @@
         appear on their bodies, sometimes with visible brown spots in between as their grow
         bigger. \n\n
         The Banded Catshark needs to be in a very large aquarium with sand substrate because
-        it likes to stay in the bottom. It mostly feeds on small crustaceans, mussels, and squid.</string>
+        it likes to stay in the bottom. It mostly feeds on small crustaceans, mussels, and squid.\n\n</string>
     <string name="dogfish">Smooth Dogfish</string>
     <string name="dogfish_desc">The Smooth Dogfish is a shark within the family of hound sharks.
         They are gray in color, sometimes brown with shades of yellow. They can grow up to about 
