--- a/Aquarium/res/values/strings.xml
+++ b/Aquarium/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="app_name">Aquarium</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="back">Back to Ecoscapes Map</string>
 
     <!-- These are the strings for Tanks -->
     <string name="living_reef">Living Reef</string>
