Updated original graphics and fixed layout properties

--- a/Aquarium/res/values/strings.xml
+++ b/Aquarium/res/values/strings.xml
@@ -109,7 +109,7 @@
         about 3.5 inches long whiel some grow another inch bigger. They have no pigment in their scales, 
         and so they appear pink-ish in color.\n\n 
         Contrary to its name, the Blind Cave Fish are actually born with normal eyes, which then 
-        deteriorates rapidly as they grow older. Their vision deteriorates to the point that that even 
+        deteriorates rapidly as they grow older. Their vision deteriorates to the point that even 
         lose their eyes. They can move sensing water pressure though.\n\n</string>
     <string name="purplereef">Purple Reeffish</string>
     <string name="purplereef_desc">The Purple Reef Fish as its name suggests, is coveered in shimmering
@@ -122,9 +122,9 @@
     <!-- These are for the living reef -->
     <string name="bluetang">Blue Tang</string>
     <string name="bluetang_desc"> The Blue Tang lives in coastal waters, coral reefs, and 
-        inshore rocky areas. they can be found in waters ranging from the Northeast United 
+        inshore rocky areas. They can be found in waters ranging from the Northeast United 
         States to the reefs of Brazil. \n\n
-        At its early stages, the Blue Tang are yellow with blue spots around its eyes.
+        At its early stages, the Blue Tang is yellow with blue spots around its eyes.
         As they mature, The Blue Tang\'s color becomes vibrant blue with bold black markings. 
         The black shade begins at the eyes down to its dorsal fins. It continues down to its tail 
         where it circles back above the pectoral fin to create a unique pattern.\n\n
