--- a/Aquarium/res/values/strings.xml
+++ b/Aquarium/res/values/strings.xml
@@ -6,15 +6,16 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="back">Back to Ecoscapes Map</string>
+    <string name="ecomap">Ecoscapes Map</string>
 
     <!-- These are the strings for Tanks -->
     <string name="living_reef">Living Reef</string>
     <string name="artificial_reef">Artificial Reef</string>
-    <string name="shark_tank">Cat Shark and Dogfish</string>
-    <string name="poison_tank">Poisonous Creatures</string>
+    <string name="shark_tank">Shark Tank</string>
+    <string name="poison_tank">Poisonous Tank</string>
     <string name="lobster_tank">Lobster Tank</string>
     <string name="school_tank">Schooling Reef</string>
-    <string name="cave_tank">Blind Cave Tank</string>
+    <string name="cave_tank">Blind Cave</string>
 
     <!-- These are strings for individual fish -->
     <string name="catshark">Banded Catshark</string>
